--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="container header">
     <div class="brand">
-      <img src="logo.jpg" alt="Logo Frodo" class="logo" id="logoImg">
+      <img src="logo.webp" alt="Logo Frodo" class="logo" id="logoImg">
       <div>
         <h1>Frodo Bolsón</h1>
         <div class="small">Camping | El Bolsón</div>
@@ -37,7 +37,7 @@
   <main class="container">
     <section class="hero">
       <div class="intro card">
-        <img src="img/home.jpg" alt="">
+        <img src="img/home.webp" alt="">
         <h2>Bienvenido a Camping Frodo Bolsón</h2>
         <p>¿Estás buscando un lugar ideal para acampar y relajarte en estas vacaciones? ¡Vení a Frodo Bolsón!</p>
         <p>Nuestro camping cuenta con un predio de <strong>5000m²</strong> ubicado frente al río Quemquemtreu. Con un entorno tranquilo para disfrutar en familia o con amigos.</p>
