--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="info-list">
           <li><i class="fas fa-water"></i> Frente al río Quemquemtreu</li>
           <li><i class="fas fa-wifi"></i> Wi-Fi disponible</li>
-          <li><i class="fas fa-campground"></i>No cobramos carpa</li>
+          <li><i class="fas fa-campground"></i>No cobramos carpa, se cobra por persona</li>
         </ul>
         <p class="small"><i class="fas fa-clock"></i> <strong>Horarios</strong></p>
         <ul class="info-list">
